# 2d_lidar_perception

./: CMakeLists.txt  package.xml
include/: laser_detect_pallet.h
src/: 2d_lidar_perception_node.cpp  client.cpp  laser_detect_pallet.cpp
srv/: status.srv
